WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248571
[leading-trim][IFC] Ignore positive half leading when line-height is not 'normal'
https://bugs.webkit.org/show_bug.cgi?id=248571
Summary
[leading-trim][IFC] Ignore positive half leading when line-height is not 'nor...
alan
Reported
2022-11-30 16:06:29 PST
ssia
Attachments
[fast-cq]Patch
(5.92 KB, patch)
2022-11-30 16:16 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-11-30 16:16:07 PST
Created
attachment 463818
[details]
[fast-cq]Patch
EWS
Comment 2
2022-12-03 08:10:19 PST
Committed
257322@main
(943d096899a0): <
https://commits.webkit.org/257322@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 463818
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-12-03 08:11:17 PST
<
rdar://problem/102936372
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug