[leading-trim][IFC] Ignore positive half leading when line-height is not 'normal' https://bugs.webkit.org/show_bug.cgi?id=248571

Reviewed by Antti Koivisto.

https://www.w3.org/TR/css-inline-3/#inline-height

Reset the computed half-leading value when it is greater than 0 for line-heigh: "not normal" cases. It ensures that we don't add extra spacing between lines when text-edge is not leading.

* LayoutTests/fast/text/text-edge-no-half-leading-with-line-height-simple-expected-mismatch.html: Added.
* LayoutTests/fast/text/text-edge-no-half-leading-with-line-height-simple.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::setVerticalPropertiesForInlineLevelBox const):

Canonical link: https://commits.webkit.org/257322@main